fix some spacings, fix navbar animation display, fix font sizes

--- a/src/app/content/home/home.component.scss
+++ b/src/app/content/home/home.component.scss
@@ -27,10 +27,7 @@
         @include bp-large {
             height: 100%;
             font-size: 1.1rem;
-        }
-        @include bp-xlarge {
-            height: 100%;
-            font-size: 1.2rem;
+            line-height: 1.5rem;
         }
 
         &-text {
@@ -121,7 +118,6 @@
         &-form {
             display: flex;
             width: 100%;
-            height: 600px;
             flex-direction: column;
             justify-content: center; 
             align-items: center;
